--- a/css/width-1250.css
+++ b/css/width-1250.css
@@ -1,7 +1,4 @@
-@media (max-width: 1250px) {
-  html, body, #app, .wrapping-wrapper {
-      height: unset;
-  }
+@media (max-width: 1199px) {
   .wrapping-wrapper {
       flex-direction: column;
       gap: 20px;
@@ -23,6 +20,9 @@
       flex-direction: column;
       max-width: 320px;
   }
+  .flex-end-1250-center {
+      justify-content: center;
+  } 
   input.text {
       min-width: unset;
       width: min(400px, 80%);
