--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -11,12 +11,20 @@
 
 	--button_color: black;
 	--button_bg-color: white;
-	--button_disabled-color: white;
-	--button_disabled-bg-color: black;
+	--button_disabled-color: rgba(114, 114, 114, 0.5);
+	--button_disabled-bg-color: rgb(252, 252, 252);
+
+	--input_color: black;
+	--input_bg-color: white;
+	--input_read-only-color: rgba(0, 0, 0, 0.7);
+	--input_read-only-bg-color: rgba(230, 230, 230, 0.7);
+
+	--counter-display_color: black;
+	--counter-display_bg-color: white;
 }
 
 .darkmode {
-	--bg-color: rgb(80, 80, 80);
+	--bg-color: rgb(22, 22, 22);;
 	
 	--darkmode-toggle_primary-color: white;
 	--darkmode-toggle_secondary-color: black;
@@ -28,8 +36,16 @@
 
 	--button_color: white;
 	--button_bg-color: black;
-	--button_disabled-color: rgba(114, 114, 114, 0.5);
-	--button_disabled-bg-color: rgb(252, 252, 252);
+	--button_disabled-color: rgb(165, 165, 165);
+	--button_disabled-bg-color: rgba(34, 34, 34, 0.5);
+
+	--input_color: white;
+	--input_bg-color: black;
+	--input_read-only-color: rgb(207, 207, 207);
+	--input_read-only-bg-color: rgb(41, 41, 41);
+
+	--counter-display_color: white;
+	--counter-display_bg-color: black;
 }
 
 body {
