Make notes not always visible and add generic button component

--- a/src/styles/shared.css
+++ b/src/styles/shared.css
@@ -1,3 +1,16 @@
 :root {
 	--header-height: 62px;
 }
+
+body, #app {
+	min-height: 100vh;
+}
+
+#app {
+	display: flex;
+	flex-direction: column;
+}
+
+.wrapper {
+	flex: 1;
+}
