--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -1,30 +1,19 @@
 :root {
-	--primary-color: black;
-	--secondary-color: white;
-	--tertiary-color: #a9a9a9;
-	--quarternary-color: rgb(255, 253, 247);
+	--text-color: #030303;
+	--text-color-off: #7e7e7e;
 
-	--button_disabled-color: rgba(114, 114, 114, 0.5);
-	--button_disabled-bg-color: rgb(252, 252, 252);
+	--element-bg-color: #ffffff;
+	--element-bg-color-off: #eeeeee;
 
-	--input_read-only-color: rgba(0, 0, 0, 0.7);
-	--input_read-only-bg-color: rgba(230, 230, 230, 0.7);
-
+	--bg-color: #fdfcfa;
 }
 
 .darkmode {
-	--primary-color: rgb(230, 230, 230);
-	--secondary-color: rgb(31, 31, 31);
-	--tertiary-color: rgb(158, 158, 158);
-	--quarternary-color: rgb(37, 37, 37);
+	--text-color: #F0F7F4;
+	--text-color-off: #8a8a8a;
 
-	--button_disabled-color: rgb(165, 165, 165);
-	--button_disabled-bg-color: rgba(34, 34, 34, 0.5);
+	--element-bg-color: #121212;
+	--element-bg-color-off: #1f1f1f;
 
-	--input_read-only-color: rgb(207, 207, 207);
-	--input_read-only-bg-color: rgb(41, 41, 41);
-}
-
-body {
-	background-color: var(--quarternary-color);
+	--bg-color: #222222;
 }
