Refactor css variables to make for sense for what they target

--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -1,19 +1,23 @@
 :root {
 	--text-color: #030303;
-	--text-color-off: #b8b8b8;
+	--text-color-disabled: #b8b8b8;
+	--text-color-placeholder: #b8b8b8;
 
 	--element-bg-color: #ffffff;
-	--element-bg-color-off: #dfdede;
+	--element-bg-color-disabled: #dfdede;
 
+	--bg-color-header: #ffffff;
 	--bg-color: #ffffff;
 }
 
 .darkmode {
 	--text-color: #F0F7F4;
-	--text-color-off: #8a8a8a;
+	--text-color-disabled: #8a8a8a;
+	--text-color-placeholder: #8a8a8a;
 
 	--element-bg-color: #121212;
-	--element-bg-color-off: #2c2c2c;
+	--element-bg-color-disabled: #2c2c2c;
 
+	--bg-color-header: #222222;
 	--bg-color: #222222;
 }
