--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -1,13 +1,13 @@
 :root {
 	--text-color: #030303;
-	--text-color-disabled: #b8b8b8;
+	--text-color-disabled: #c7c7c7;
 	--text-color-placeholder: #b8b8b8;
 
 	--element-bg-color: #ffffff;
-	--element-bg-color-disabled: #dfdede;
+	--element-bg-color-disabled: #e0e0e0;
 
-	--bg-color-header: #ffffff;
-	--bg-color: #ffffff;
+	--bg-color-header: #fcfcfc;
+	--bg-color: #fcfcfc;
 }
 
 .darkmode {
