--- a/src/styles/themes.css
+++ b/src/styles/themes.css
@@ -5,6 +5,10 @@
     --text-color-placeholder: #b8b8b8;
     --text-shadow-color: #c7c7c7;
 
+    --timer-border-color: #cfcfcf;
+    --timer-bg-color: #fcfcfc;
+    --timer-running-bg-color: #e2e2e2;
+
     --element-bg-color: #ffffff;
     --element-border-color: #cfcfcf;
     --element-bg-color-disabled: #e0e0e0;
@@ -18,6 +22,10 @@
     --text-color-disabled: #8a8a8a;
     --text-color-placeholder: #8a8a8a;
     --text-shadow-color: #b1b1b1;
+
+    --timer-border-color: #8f8f8f;
+    --timer-bg-color: #383838;
+    --timer-running-bg-color: #181818;
 
     --element-bg-color: #121212;
     --element-border-color: #8f8f8f;
@@ -33,6 +41,10 @@
     --text-color-placeholder: #ffcbe1;
     --text-shadow-color: #df66a2;
 
+    --timer-border-color: #da54ad;
+    --timer-bg-color: #ff87b9;
+    --timer-running-bg-color: #e4659a;
+
     --element-bg-color: #df66a2;
     --element-border-color: #da54ad;
     --element-bg-color-disabled: #fabadb;
@@ -43,14 +55,18 @@
 
 .matrix {
     --text-color: #f0f7f4;
-    --text-color-disabled: #8a8a8a;
+    --text-color-disabled: #817e7e;
     --text-color-placeholder: #8a8a8a;
     --text-shadow-color: #599759;
 
+    --timer-border-color: #599759;
+    --timer-bg-color: #003108;
+    --timer-running-bg-color: #001f05;
+
     --element-bg-color: #112c11;
     --element-border-color: #599759;
-    --element-bg-color-disabled: #004119;
+    --element-bg-color-disabled: #18251d;
 
-    --bg-color-header: #001603;
-    --bg-color: #001603;
+    --bg-color-header: #000f02;
+    --bg-color: #001302;
 }
